// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Components/Custom Label - Variant A Default 1`] = `
<div
  className="ms-Stack css-73"
>
  <label
    className="ms-Label root-74"
  >
    Timestamp
  </label>
  <button
    className="ms-Button ms-Button--icon root-75"
    data-is-focusable={true}
    id="id__20"
    onClick={[Function]}
    onKeyDown={[Function]}
    onKeyPress={[Function]}
    onKeyUp={[Function]}
    onMouseDown={[Function]}
    onMouseUp={[Function]}
    title="Info"
    type="button"
  >
    <span
      className="ms-Button-flexContainer flexContainer-76"
      data-automationid="splitbuttonprimary"
    >
      <i
        aria-hidden={true}
        className="ms-Icon root-37 css-80 ms-Button-icon icon-78"
        data-icon-name="Info"
        role="presentation"
        style={
          Object {
            "fontFamily": "\\"FabricMDL2Icons\\"",
          }
        }
      >
        
      </i>
    </span>
  </button>
</div>
`;

exports[`Storyshots Components/Custom Label Default 1`] = `
<div
  className="ms-Stack css-73"
>
  <label
    className="ms-Label root-74"
  >
    Timestamp
  </label>
  <button
    className="ms-Button ms-Button--icon root-75"
    data-is-focusable={true}
    id="my-callout"
    onClick={[Function]}
    onKeyDown={[Function]}
    onKeyPress={[Function]}
    onKeyUp={[Function]}
    onMouseDown={[Function]}
    onMouseUp={[Function]}
    title="Info"
    type="button"
  >
    <span
      className="ms-Button-flexContainer flexContainer-76"
      data-automationid="splitbuttonprimary"
    >
      <i
        aria-hidden={true}
        className="ms-Icon root-37 css-80 ms-Button-icon icon-78"
        data-icon-name="Info"
        role="presentation"
        style={
          Object {
            "fontFamily": "\\"FabricMDL2Icons\\"",
          }
        }
      >
        
      </i>
    </span>
  </button>
</div>
`;

exports[`Storyshots Components/Punch Card Default 1`] = `
<div
  className="ms-Grid"
>
  <div
    className="ms-Grid-row"
  >
    <div
      className="ms-Grid-col ms-sm12 ms-md8 ms-lg8 ms-xl6"
    >
      <span
        className="css-81"
      >
        <h2>
          My Punch Card
        </h2>
      </span>
    </div>
  </div>
  <div
    className="ms-Grid-row"
  >
    <div
      className="ms-Grid-col ms-sm12 ms-md6"
    >
      <span
        className="css-81"
      >
        <h3>
          Goal For The Day
        </h3>
      </span>
      <div
        className="ms-Stack css-82"
      >
        <div
          className="ms-StackItem css-83"
        >
          <div
            className="ms-Stack css-84"
          >
            <div
              className="ms-TextField root-85"
            >
              <div
                className="ms-TextField-wrapper"
              >
                <label
                  className="ms-Label root-74"
                  htmlFor="TextField24"
                  id="TextFieldLabel26"
                >
                  Hours
                </label>
                <div
                  className="ms-TextField-fieldGroup fieldGroup-63"
                >
                  <input
                    aria-invalid={false}
                    aria-labelledby="TextFieldLabel26"
                    className="ms-TextField-field field-64"
                    id="TextField24"
                    max={24}
                    min={0}
                    onBlur={[Function]}
                    onChange={[Function]}
                    onFocus={[Function]}
                    onInput={[Function]}
                    type="number"
                    value="12"
                  />
                </div>
              </div>
            </div>
            <div
              className="ms-TextField root-85"
            >
              <div
                className="ms-TextField-wrapper"
              >
                <label
                  className="ms-Label root-74"
                  htmlFor="TextField27"
                  id="TextFieldLabel29"
                >
                  Minutes
                </label>
                <div
                  className="ms-TextField-fieldGroup fieldGroup-63"
                >
                  <input
                    aria-invalid={false}
                    aria-labelledby="TextFieldLabel29"
                    className="ms-TextField-field field-64"
                    id="TextField27"
                    max={59}
                    min={0}
                    onBlur={[Function]}
                    onChange={[Function]}
                    onFocus={[Function]}
                    onInput={[Function]}
                    type="number"
                    value="32"
                  />
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          className="ms-StackItem css-83"
        >
          <div
            className="ms-MessageBar ms-MessageBar-multiline root-86"
          >
            <div
              className="ms-MessageBar-content content-87"
            >
              <div
                aria-hidden={true}
                className="ms-MessageBar-icon iconContainer-88"
              >
                <i
                  aria-hidden={true}
                  className="icon-95"
                  data-icon-name="Info"
                >
                  
                </i>
              </div>
              <div
                aria-live="polite"
                className="ms-MessageBar-text text-90"
                id="MessageBar30"
                role="status"
              >
                <span
                  className="ms-MessageBar-innerText innerText-91"
                />
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    className="ms-Grid-row"
  >
    <div
      className="ms-Grid-col ms-sm-12 ms-md6"
    >
      <div
        className="ms-Stack css-96"
      >
        <div
          className="ms-StackItem css-83"
        />
        <div
          className="ms-StackItem css-83"
        >
          <button
            className="ms-Button ms-Button--primary root-97"
            data-is-focusable={true}
            onClick={[Function]}
            onKeyDown={[Function]}
            onKeyPress={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseUp={[Function]}
            type="button"
          >
            <span
              className="ms-Button-flexContainer flexContainer-76"
              data-automationid="splitbuttonprimary"
            >
              <i
                aria-hidden={true}
                className="ms-Icon root-37 css-99 ms-Button-icon icon-78"
                data-icon-name="Clock"
                role="presentation"
                style={
                  Object {
                    "fontFamily": "\\"FabricMDL2Icons-2\\"",
                  }
                }
              >
                
              </i>
              <span
                className="ms-Button-textContainer textContainer-77"
              >
                <span
                  className="ms-Button-label label-98"
                  id="id__31"
                >
                  Add Scheduled Slot
                </span>
              </span>
            </span>
          </button>
        </div>
      </div>
      <span
        className="css-81"
      >
        <h3>
          Scheduled
        </h3>
      </span>
      <div
        className="ms-Viewport"
        style={
          Object {
            "minHeight": 1,
            "minWidth": 1,
          }
        }
      >
        <div
          className="ms-DetailsList is-horizontalConstrained detailsList-100"
          data-automationid="DetailsList"
          data-is-scrollable="false"
        >
          <div
            aria-colcount={2}
            aria-readonly="true"
            aria-rowcount={3}
            role="grid"
          >
            <div
              className="ms-DetailsList-headerWrapper"
              onKeyDown={[Function]}
              role="presentation"
            >
              <div
                className="ms-FocusZone css-50 ms-DetailsHeader root-102"
                data-automationid="DetailsHeader"
                data-focuszone-id="FocusZone35"
                onFocus={[Function]}
                onKeyDown={[Function]}
                onMouseDownCapture={[Function]}
                onMouseMove={[Function]}
                role="row"
              >
                <div
                  aria-colindex={1}
                  aria-sort="none"
                  className="ms-DetailsHeader-cell is-actionable root-118"
                  data-automationid="ColumnsHeaderColumn"
                  data-is-draggable={false}
                  data-item-key="punch-in-time"
                  draggable={false}
                  role="columnheader"
                  style={
                    Object {
                      "width": 120,
                    }
                  }
                >
                  <span
                    className="cellTooltip-126"
                  >
                    <span
                      aria-haspopup={false}
                      aria-labelledby="header34-punch-in-time-name"
                      className="ms-DetailsHeader-cellTitle cellTitle-124"
                      data-is-focusable={true}
                      id="header34-punch-in-time"
                      onClick={[Function]}
                      onContextMenu={[Function]}
                    >
                      <span
                        className="ms-DetailsHeader-cellName cellName-125"
                        id="header34-punch-in-time-name"
                      >
                        In Time
                      </span>
                    </span>
                  </span>
                </div>
                <div
                  aria-colindex={2}
                  aria-sort="none"
                  className="ms-DetailsHeader-cell is-actionable root-118"
                  data-automationid="ColumnsHeaderColumn"
                  data-is-draggable={false}
                  data-item-key="punch-out-time"
                  draggable={false}
                  role="columnheader"
                  style={
                    Object {
                      "width": 120,
                    }
                  }
                >
                  <span
                    className="cellTooltip-126"
                  >
                    <span
                      aria-haspopup={false}
                      aria-labelledby="header34-punch-out-time-name"
                      className="ms-DetailsHeader-cellTitle cellTitle-124"
                      data-is-focusable={true}
                      id="header34-punch-out-time"
                      onClick={[Function]}
                      onContextMenu={[Function]}
                    >
                      <span
                        className="ms-DetailsHeader-cellName cellName-125"
                        id="header34-punch-out-time-name"
                      >
                        Out Time
                      </span>
                    </span>
                  </span>
                </div>
              </div>
            </div>
            <div
              className="ms-DetailsList-contentWrapper"
              onKeyDown={[Function]}
              role="presentation"
            >
              <div
                className="ms-SelectionZone"
                onClick={[Function]}
                onContextMenu={[Function]}
                onDoubleClick={[Function]}
                onFocusCapture={[Function]}
                onKeyDown={[Function]}
                onKeyDownCapture={[Function]}
                onMouseDown={[Function]}
                onMouseDownCapture={[Function]}
                role="presentation"
              >
                <div
                  className="ms-FocusZone css-50 focusZone-101"
                  data-focuszone-id="FocusZone36"
                  onBlur={[Function]}
                  onFocus={[Function]}
                  onKeyDown={[Function]}
                  onMouseDownCapture={[Function]}
                >
                  <div
                    className="ms-List"
                    role="presentation"
                  >
                    <div
                      className="ms-List-surface"
                      role="presentation"
                    >
                      <div
                        className="ms-List-page"
                        role="presentation"
                        style={Object {}}
                      >
                        <div
                          className="ms-List-cell"
                          data-automationid="ListCell"
                          data-list-index={0}
                          role="presentation"
                        >
                          <div
                            aria-rowindex={1}
                            className="ms-FocusZone css-50 ms-DetailsRow root-138"
                            data-automationid="DetailsRow"
                            data-focuszone-id="FocusZone37"
                            data-is-focusable={true}
                            data-item-index={0}
                            data-selection-index={0}
                            data-selection-touch-invoke={true}
                            onFocus={[Function]}
                            onKeyDown={[Function]}
                            onMouseDownCapture={[Function]}
                            role="row"
                            style={
                              Object {
                                "minWidth": 200,
                              }
                            }
                          >
                            <div
                              className="ms-DetailsRow-fields fields-145"
                              data-automationid="DetailsRowFields"
                              role="presentation"
                            >
                              <div
                                aria-colindex={1}
                                aria-readonly={true}
                                className="test-40 ms-DetailsRow-cell cell-141 cellUnpadded-139"
                                data-automation-key="punch-in-time"
                                data-automationid="DetailsRowCell"
                                role="gridcell"
                                style={
                                  Object {
                                    "width": 120,
                                  }
                                }
                              >
                                <div
                                  className="ms-TextField root-62"
                                >
                                  <div
                                    className="ms-TextField-wrapper"
                                  >
                                    <div
                                      className="ms-TextField-fieldGroup fieldGroup-63"
                                    >
                                      <input
                                        aria-invalid={false}
                                        className="ms-TextField-field field-64"
                                        id="TextField38"
                                        onBlur={[Function]}
                                        onChange={[Function]}
                                        onFocus={[Function]}
                                        onInput={[Function]}
                                        type="text"
                                        value="06:00"
                                      />
                                    </div>
                                  </div>
                                </div>
                              </div>
                              <div
                                aria-colindex={2}
                                aria-readonly={true}
                                className="test-40 ms-DetailsRow-cell cell-141 cellUnpadded-139"
                                data-automation-key="punch-out-time"
                                data-automationid="DetailsRowCell"
                                role="gridcell"
                                style={
                                  Object {
                                    "width": 120,
                                  }
                                }
                              >
                                <div
                                  className="ms-TextField root-62"
                                >
                                  <div
                                    className="ms-TextField-wrapper"
                                  >
                                    <div
                                      className="ms-TextField-fieldGroup fieldGroup-63"
                                    >
                                      <input
                                        aria-invalid={false}
                                        className="ms-TextField-field field-64"
                                        id="TextField41"
                                        onBlur={[Function]}
                                        onChange={[Function]}
                                        onFocus={[Function]}
                                        onInput={[Function]}
                                        type="text"
                                        value="06:40"
                                      />
                                    </div>
                                  </div>
                                </div>
                              </div>
                            </div>
                            <span
                              aria-checked={false}
                              className="checkCover-144"
                              data-selection-toggle={true}
                              role="checkbox"
                            />
                          </div>
                        </div>
                        <div
                          className="ms-List-cell"
                          data-automationid="ListCell"
                          data-list-index={1}
                          role="presentation"
                        >
                          <div
                            aria-rowindex={2}
                            className="ms-FocusZone css-50 ms-DetailsRow root-138"
                            data-automationid="DetailsRow"
                            data-focuszone-id="FocusZone44"
                            data-is-focusable={true}
                            data-item-index={1}
                            data-selection-index={1}
                            data-selection-touch-invoke={true}
                            onFocus={[Function]}
                            onKeyDown={[Function]}
                            onMouseDownCapture={[Function]}
                            role="row"
                            style={
                              Object {
                                "minWidth": 200,
                              }
                            }
                          >
                            <div
                              className="ms-DetailsRow-fields fields-145"
                              data-automationid="DetailsRowFields"
                              role="presentation"
                            >
                              <div
                                aria-colindex={1}
                                aria-readonly={true}
                                className="test-40 ms-DetailsRow-cell cell-141 cellUnpadded-139"
                                data-automation-key="punch-in-time"
                                data-automationid="DetailsRowCell"
                                role="gridcell"
                                style={
                                  Object {
                                    "width": 120,
                                  }
                                }
                              >
                                <button
                                  className="ms-Button ms-Button--primary root-97"
                                  data-is-focusable={true}
                                  onClick={[Function]}
                                  onKeyDown={[Function]}
                                  onKeyPress={[Function]}
                                  onKeyUp={[Function]}
                                  onMouseDown={[Function]}
                                  onMouseUp={[Function]}
                                  type="button"
                                >
                                  <span
                                    className="ms-Button-flexContainer flexContainer-76"
                                    data-automationid="splitbuttonprimary"
                                  >
                                    <i
                                      aria-hidden={true}
                                      className="ms-Icon root-37 css-148 ms-Button-icon icon-78"
                                      data-icon-name="Leave"
                                      role="presentation"
                                      style={
                                        Object {
                                          "fontFamily": "\\"FabricMDL2Icons-15\\"",
                                        }
                                      }
                                    >
                                      
                                    </i>
                                    <span
                                      className="ms-Button-textContainer textContainer-77"
                                    >
                                      <span
                                        className="ms-Button-label label-98"
                                        id="id__45"
                                      >
                                        Punch In
                                      </span>
                                    </span>
                                  </span>
                                </button>
                              </div>
                              <div
                                aria-colindex={2}
                                aria-readonly={true}
                                className="test-40 ms-DetailsRow-cell cell-141 cellUnpadded-139"
                                data-automation-key="punch-out-time"
                                data-automationid="DetailsRowCell"
                                role="gridcell"
                                style={
                                  Object {
                                    "width": 120,
                                  }
                                }
                              >
                                <button
                                  aria-disabled={true}
                                  className="ms-Button ms-Button--primary is-disabled root-149"
                                  data-is-focusable={false}
                                  disabled={true}
                                  onClick={[Function]}
                                  onKeyDown={[Function]}
                                  onKeyPress={[Function]}
                                  onKeyUp={[Function]}
                                  onMouseDown={[Function]}
                                  onMouseUp={[Function]}
                                  type="button"
                                >
                                  <span
                                    className="ms-Button-flexContainer flexContainer-76"
                                    data-automationid="splitbuttonprimary"
                                  >
                                    <i
                                      aria-hidden={true}
                                      className="ms-Button-icon icon-152"
                                      data-icon-name="Leave"
                                    >
                                      
                                    </i>
                                    <span
                                      className="ms-Button-textContainer textContainer-77"
                                    >
                                      <span
                                        className="ms-Button-label label-98"
                                        id="id__48"
                                      >
                                        Punch Out
                                      </span>
                                    </span>
                                  </span>
                                </button>
                              </div>
                            </div>
                            <span
                              aria-checked={false}
                              className="checkCover-144"
                              data-selection-toggle={true}
                              role="checkbox"
                            />
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        dir="ltr"
      >
        <div
          className="ms-ProgressIndicator root-131"
        >
          <div
            className="ms-ProgressIndicator-itemName itemName-132"
          >
            Punched
          </div>
          <div
            className="ms-ProgressIndicator-itemProgress itemProgress-134"
          >
            <div
              className="ms-ProgressIndicator-progressTrack progressTrack-135"
            />
            <div
              aria-valuemax={100}
              aria-valuemin={0}
              aria-valuenow={40}
              className="ms-ProgressIndicator-progressBar progressBar-136"
              role="progressbar"
              style={
                Object {
                  "transition": undefined,
                  "width": "40%",
                }
              }
            />
          </div>
        </div>
      </div>
      <div
        dir="rtl"
      >
        <div
          className="ms-ProgressIndicator root-131"
        >
          <div
            className="ms-ProgressIndicator-itemName itemName-132"
          >
            Scheduled
          </div>
          <div
            className="ms-ProgressIndicator-itemProgress itemProgress-134"
          >
            <div
              className="ms-ProgressIndicator-progressTrack progressTrack-135"
            />
            <div
              aria-valuemax={100}
              aria-valuemin={0}
              aria-valuenow={20}
              className="ms-ProgressIndicator-progressBar progressBar-136"
              role="progressbar"
              style={
                Object {
                  "transition": undefined,
                  "width": "20%",
                }
              }
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Components/Punch Card With Hook 1`] = `
<div
  className="ms-Grid"
>
  <div
    className="ms-Grid-row"
  >
    <div
      className="ms-Grid-col ms-sm12 ms-md8 ms-lg8 ms-xl6"
    >
      <span
        className="css-81"
      >
        <h2>
          My Punch Card
        </h2>
      </span>
    </div>
  </div>
  <div
    className="ms-Grid-row"
  >
    <div
      className="ms-Grid-col ms-sm12 ms-md6"
    >
      <span
        className="css-81"
      >
        <h3>
          Goal For The Day
        </h3>
      </span>
      <div
        className="ms-Stack css-82"
      >
        <div
          className="ms-StackItem css-83"
        >
          <div
            className="ms-Stack css-84"
          >
            <div
              className="ms-TextField root-153"
            >
              <div
                className="ms-TextField-wrapper"
              >
                <div
                  className="ms-Stack css-73"
                >
                  <label
                    className="ms-Label root-74"
                  >
                    Hours
                  </label>
                  <button
                    className="ms-Button ms-Button--icon root-75"
                    data-is-focusable={true}
                    id="id__54"
                    onClick={[Function]}
                    onKeyDown={[Function]}
                    onKeyPress={[Function]}
                    onKeyUp={[Function]}
                    onMouseDown={[Function]}
                    onMouseUp={[Function]}
                    title="Info"
                    type="button"
                  >
                    <span
                      className="ms-Button-flexContainer flexContainer-76"
                      data-automationid="splitbuttonprimary"
                    >
                      <i
                        aria-hidden={true}
                        className="ms-Icon root-37 css-80 ms-Button-icon icon-78"
                        data-icon-name="Info"
                        role="presentation"
                        style={
                          Object {
                            "fontFamily": "\\"FabricMDL2Icons\\"",
                          }
                        }
                      >
                        
                      </i>
                    </span>
                  </button>
                </div>
                <div
                  className="ms-TextField-fieldGroup fieldGroup-63"
                >
                  <input
                    aria-invalid={false}
                    aria-labelledby="TextFieldLabel53"
                    className="ms-TextField-field field-64"
                    id="TextField51"
                    max={24}
                    min={0}
                    onBlur={[Function]}
                    onChange={[Function]}
                    onFocus={[Function]}
                    onInput={[Function]}
                    type="number"
                    value="09"
                  />
                </div>
              </div>
            </div>
            <div
              className="ms-TextField root-153"
            >
              <div
                className="ms-TextField-wrapper"
              >
                <div
                  className="ms-Stack css-73"
                >
                  <label
                    className="ms-Label root-74"
                  >
                    Minutes
                  </label>
                  <button
                    className="ms-Button ms-Button--icon root-75"
                    data-is-focusable={true}
                    id="id__61"
                    onClick={[Function]}
                    onKeyDown={[Function]}
                    onKeyPress={[Function]}
                    onKeyUp={[Function]}
                    onMouseDown={[Function]}
                    onMouseUp={[Function]}
                    title="Info"
                    type="button"
                  >
                    <span
                      className="ms-Button-flexContainer flexContainer-76"
                      data-automationid="splitbuttonprimary"
                    >
                      <i
                        aria-hidden={true}
                        className="ms-Icon root-37 css-80 ms-Button-icon icon-78"
                        data-icon-name="Info"
                        role="presentation"
                        style={
                          Object {
                            "fontFamily": "\\"FabricMDL2Icons\\"",
                          }
                        }
                      >
                        
                      </i>
                    </span>
                  </button>
                </div>
                <div
                  className="ms-TextField-fieldGroup fieldGroup-63"
                >
                  <input
                    aria-invalid={false}
                    aria-labelledby="TextFieldLabel60"
                    className="ms-TextField-field field-64"
                    disabled={false}
                    id="TextField58"
                    max={59}
                    min={0}
                    onBlur={[Function]}
                    onChange={[Function]}
                    onFocus={[Function]}
                    onInput={[Function]}
                    type="number"
                    value="00"
                  />
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          className="ms-StackItem css-83"
        >
          <div
            className="ms-MessageBar ms-MessageBar-multiline root-154"
          >
            <div
              className="ms-MessageBar-content content-87"
            >
              <div
                aria-hidden={true}
                className="ms-MessageBar-icon iconContainer-88"
              >
                <i
                  aria-hidden={true}
                  className="icon-95"
                  data-icon-name="Info"
                >
                  
                </i>
              </div>
              <div
                aria-live="polite"
                className="ms-MessageBar-text text-90"
                id="MessageBar65"
                role="status"
              >
                <span
                  className="ms-MessageBar-innerText innerText-91"
                />
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    className="ms-Grid-row"
  >
    <div
      className="ms-Grid-col ms-sm-12 ms-md6"
    >
      <div
        className="ms-Stack css-96"
      >
        <div
          className="ms-StackItem css-83"
        />
        <div
          className="ms-StackItem css-83"
        >
          <button
            className="ms-Button ms-Button--primary root-97"
            data-is-focusable={true}
            onClick={[Function]}
            onKeyDown={[Function]}
            onKeyPress={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseUp={[Function]}
            type="button"
          >
            <span
              className="ms-Button-flexContainer flexContainer-76"
              data-automationid="splitbuttonprimary"
            >
              <i
                aria-hidden={true}
                className="ms-Icon root-37 css-148 ms-Button-icon icon-78"
                data-icon-name="Leave"
                role="presentation"
                style={
                  Object {
                    "fontFamily": "\\"FabricMDL2Icons-15\\"",
                  }
                }
              >
                
              </i>
              <span
                className="ms-Button-textContainer textContainer-77"
              >
                <span
                  className="ms-Button-label label-98"
                  id="id__66"
                >
                  Start Your Day
                </span>
              </span>
            </span>
          </button>
        </div>
      </div>
      <span
        className="css-81"
      >
        <h3>
          Scheduled
        </h3>
      </span>
      <div
        className="ms-Viewport"
        style={
          Object {
            "minHeight": 1,
            "minWidth": 1,
          }
        }
      >
        <div
          className="ms-DetailsList is-horizontalConstrained detailsList-100"
          data-automationid="DetailsList"
          data-is-scrollable="false"
        >
          <div
            aria-colcount={2}
            aria-readonly="true"
            aria-rowcount={1}
            role="grid"
          >
            <div
              className="ms-DetailsList-headerWrapper"
              onKeyDown={[Function]}
              role="presentation"
            >
              <div
                className="ms-FocusZone css-50 ms-DetailsHeader root-102"
                data-automationid="DetailsHeader"
                data-focuszone-id="FocusZone70"
                onFocus={[Function]}
                onKeyDown={[Function]}
                onMouseDownCapture={[Function]}
                onMouseMove={[Function]}
                role="row"
              >
                <div
                  aria-colindex={1}
                  aria-sort="none"
                  className="ms-DetailsHeader-cell is-actionable root-118"
                  data-automationid="ColumnsHeaderColumn"
                  data-is-draggable={false}
                  data-item-key="punch-in-time"
                  draggable={false}
                  role="columnheader"
                  style={
                    Object {
                      "width": 120,
                    }
                  }
                >
                  <span
                    className="cellTooltip-126"
                  >
                    <span
                      aria-haspopup={false}
                      aria-labelledby="header69-punch-in-time-name"
                      className="ms-DetailsHeader-cellTitle cellTitle-124"
                      data-is-focusable={true}
                      id="header69-punch-in-time"
                      onClick={[Function]}
                      onContextMenu={[Function]}
                    >
                      <span
                        className="ms-DetailsHeader-cellName cellName-125"
                        id="header69-punch-in-time-name"
                      >
                        In Time
                      </span>
                    </span>
                  </span>
                </div>
                <div
                  aria-colindex={2}
                  aria-sort="none"
                  className="ms-DetailsHeader-cell is-actionable root-118"
                  data-automationid="ColumnsHeaderColumn"
                  data-is-draggable={false}
                  data-item-key="punch-out-time"
                  draggable={false}
                  role="columnheader"
                  style={
                    Object {
                      "width": 120,
                    }
                  }
                >
                  <span
                    className="cellTooltip-126"
                  >
                    <span
                      aria-haspopup={false}
                      aria-labelledby="header69-punch-out-time-name"
                      className="ms-DetailsHeader-cellTitle cellTitle-124"
                      data-is-focusable={true}
                      id="header69-punch-out-time"
                      onClick={[Function]}
                      onContextMenu={[Function]}
                    >
                      <span
                        className="ms-DetailsHeader-cellName cellName-125"
                        id="header69-punch-out-time-name"
                      >
                        Out Time
                      </span>
                    </span>
                  </span>
                </div>
              </div>
            </div>
            <div
              className="ms-DetailsList-contentWrapper"
              onKeyDown={[Function]}
              role="presentation"
            >
              <div
                className="ms-SelectionZone"
                onClick={[Function]}
                onContextMenu={[Function]}
                onDoubleClick={[Function]}
                onFocusCapture={[Function]}
                onKeyDown={[Function]}
                onKeyDownCapture={[Function]}
                onMouseDown={[Function]}
                onMouseDownCapture={[Function]}
                role="presentation"
              >
                <div
                  className="ms-FocusZone css-50 focusZone-101"
                  data-focuszone-id="FocusZone71"
                  onBlur={[Function]}
                  onFocus={[Function]}
                  onKeyDown={[Function]}
                  onMouseDownCapture={[Function]}
                >
                  <div
                    className="ms-List"
                  >
                    <div
                      className="ms-List-surface"
                      role="presentation"
                    />
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        dir="ltr"
      >
        <div
          className="ms-ProgressIndicator root-131"
        >
          <div
            className="ms-ProgressIndicator-itemName itemName-132"
          >
            Punched
          </div>
          <div
            className="ms-ProgressIndicator-itemProgress itemProgress-134"
          >
            <div
              className="ms-ProgressIndicator-progressTrack progressTrack-135"
            />
            <div
              aria-valuemax={100}
              aria-valuemin={0}
              aria-valuenow={0}
              className="ms-ProgressIndicator-progressBar progressBar-136"
              role="progressbar"
              style={
                Object {
                  "transition": "none",
                  "width": "0%",
                }
              }
            />
          </div>
        </div>
      </div>
      <div
        dir="rtl"
      >
        <div
          className="ms-ProgressIndicator root-131"
        >
          <div
            className="ms-ProgressIndicator-itemName itemName-132"
          >
            Scheduled
          </div>
          <div
            className="ms-ProgressIndicator-itemProgress itemProgress-134"
          >
            <div
              className="ms-ProgressIndicator-progressTrack progressTrack-135"
            />
            <div
              aria-valuemax={100}
              aria-valuemin={0}
              aria-valuenow={20}
              className="ms-ProgressIndicator-progressBar progressBar-136"
              role="progressbar"
              style={
                Object {
                  "transition": undefined,
                  "width": "20%",
                }
              }
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots POCs/Test Editing Array Of Input Fields 1`] = `
Array [
  <div
    className="ms-TextField root-62"
  >
    <div
      className="ms-TextField-wrapper"
    >
      <div
        className="ms-TextField-fieldGroup fieldGroup-63"
      >
        <input
          aria-invalid={false}
          className="ms-TextField-field field-64"
          id="TextField8"
          onBlur={[Function]}
          onChange={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onInput={[Function]}
          onKeyDown={[Function]}
          onMouseDown={[Function]}
          onMouseUp={[Function]}
          onPaste={[Function]}
          type="text"
          value="12:00"
        />
      </div>
    </div>
  </div>,
  <div
    className="ms-TextField root-62"
  >
    <div
      className="ms-TextField-wrapper"
    >
      <div
        className="ms-TextField-fieldGroup fieldGroup-63"
      >
        <input
          aria-invalid={false}
          className="ms-TextField-field field-64"
          id="TextField11"
          onBlur={[Function]}
          onChange={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onInput={[Function]}
          onKeyDown={[Function]}
          onMouseDown={[Function]}
          onMouseUp={[Function]}
          onPaste={[Function]}
          type="text"
          value="13:00"
        />
      </div>
    </div>
  </div>,
  <div
    className="ms-TextField root-62"
  >
    <div
      className="ms-TextField-wrapper"
    >
      <div
        className="ms-TextField-fieldGroup fieldGroup-63"
      >
        <input
          aria-invalid={false}
          className="ms-TextField-field field-64"
          id="TextField14"
          onBlur={[Function]}
          onChange={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onInput={[Function]}
          onKeyDown={[Function]}
          onMouseDown={[Function]}
          onMouseUp={[Function]}
          onPaste={[Function]}
          type="text"
          value="14:00"
        />
      </div>
    </div>
  </div>,
  <pre>
    {
  "fields": [
    {
      "inputVal": "12:00",
      "inTime": 1605853800000
    },
    {
      "inputVal": "13:00",
      "inTime": 1605857400000
    },
    {
      "inputVal": "14:00",
      "inTime": "14:00"
    }
  ]
}
  </pre>,
]
`;

exports[`Storyshots POCs/Test Pivot Test 1`] = `
<div
  className="ms-Stack css-42"
>
  <div
    aria-label="Basic Pivot Example"
    className="ms-depth-8"
    role="toolbar"
  >
    <div
      className="ms-FocusZone css-50 ms-Pivot root-43"
      data-focuszone-id="FocusZone1"
      onFocus={[Function]}
      onKeyDown={[Function]}
      onMouseDownCapture={[Function]}
      role="tablist"
    >
      <button
        aria-selected={true}
        className="ms-Button ms-Button--action ms-Button--command ms-Pivot-link is-selected linkIsSelected-51"
        data-content="Convert 2 Timestamp"
        data-is-focusable={true}
        data-order={1}
        data-title="My Files Title"
        id="Pivot0-Tab0"
        name="Convert 2 Timestamp"
        onClick={[Function]}
        onKeyDown={[Function]}
        onKeyPress={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseUp={[Function]}
        role="tab"
        type="button"
      >
        <span
          className="ms-Button-flexContainer flexContainer-52"
          data-automationid="splitbuttonprimary"
        >
          <span
            className="ms-Pivot-linkContent linkContent-47"
          >
            <span
              className="ms-Pivot-text text-48"
            >
               
              Convert 2 Timestamp
            </span>
          </span>
        </span>
      </button>
      <button
        aria-selected={false}
        className="ms-Button ms-Button--action ms-Button--command ms-Pivot-link link-59"
        data-content="Convert 2 Date"
        data-is-focusable={true}
        id="Pivot0-Tab1"
        name="Convert 2 Date"
        onClick={[Function]}
        onKeyDown={[Function]}
        onKeyPress={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseUp={[Function]}
        role="tab"
        type="button"
      >
        <span
          className="ms-Button-flexContainer flexContainer-52"
          data-automationid="splitbuttonprimary"
        >
          <span
            className="ms-Pivot-linkContent linkContent-47"
          >
            <span
              className="ms-Pivot-text text-48"
            >
               
              Convert 2 Date
            </span>
          </span>
        </span>
      </button>
    </div>
    <div
      aria-hidden={false}
      aria-labelledby="Pivot0-Tab0"
      className="itemContainer-44"
      hidden={false}
      role="tabpanel"
    >
      <div>
        <div
          className="ms-Stack css-42"
        >
          <span
            className="css-60"
          >
            Convert 2 Timestamp
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;
